# cropion-rover

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package.xml  readme  requirements.txt
config/: gps_config.json
firmware/esp32_controller/: config.h  esp32_controller.ino  motors.cpp  motors.h  serial_comm.h  servo.h
launch/: rover.launch  rover.launch.py
src/: main.py
src/motor_control/: motor_driver.py  movement.py  servo_driver.py
src/navigation/: obstacle_avoidance.py  path_planner.py  row_detection.py
src/sensors/: camera.py  gps.py
